--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
+    "json-loader": "^0.5.7",
+    "mdbreact": "^4.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react-fade-in": "^0.1.6",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
+    "react-scripts": "3.1.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
