--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "json-loader": "^0.5.7",
     "mdbreact": "^4.19.0",
     "react": "^16.9.0",
+    "react-device-detect": "^1.7.5",
     "react-dom": "^16.9.0",
     "react-fade-in": "^0.1.6",
     "react-loading": "^2.0.3",
