--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-fade-in": "^0.1.6",
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
+    "react-responsive-carousel": "^3.1.50",
     "react-scripts": "3.1.0",
     "react-svg": "^10.0.17",
     "styled-components": "^4.3.2"
