--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-responsive-carousel": "^3.1.50",
     "react-scripts": "3.1.0",
     "react-svg": "^10.0.17",
+    "react-transition-group": "^4.2.2",
     "styled-components": "^4.3.2"
   },
   "scripts": {
