--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
     "react-responsive-carousel": "^3.1.50",
+    "react-responsive-modal": "^4.0.1",
     "react-scripts": "3.1.0",
     "react-svg": "^10.0.17",
     "react-toggle-display": "^2.2.0",
